--- a/note-api/src/main/resources/application.properties
+++ b/note-api/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8082
 spring.datasource.url= jdbc:mysql://localhost:3306/notes
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
